--- a/website/login.html
+++ b/website/login.html
@@ -3,92 +3,313 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rice Disease Detection - Login</title>
-    <link rel="stylesheet" href="auth.css">
+    <title>Rice Stress Detector - Login & Registration</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
 </head>
 <body>
-    <div class="container">
-        <div class="auth-box">
-            <div class="logo-section">
-                <h1>🌾 Rice Disease Detection System</h1>
-                <p>Smart Agriculture for Better Yields</p>
+    <div class="auth-container">
+        <!-- Left Panel - Branding -->
+        <div class="left-panel">
+            <div class="brand-content">
+                <h1>🌾 Rice Stress Detector</h1>
+                <p class="tagline">Smart Disease Detection & Crop Management</p>
+                <p class="description">Join our platform to detect rice diseases, connect with research labs, and access premium farming resources.</p>
+            </div>
+        </div>
+
+        <!-- Right Panel - Authentication Forms -->
+        <div class="right-panel">
+            <!-- Tab Navigation -->
+            <div class="tab-navigation">
+                <button class="tab-btn active" data-tab="login">Login</button>
+                <button class="tab-btn" data-tab="register">Register</button>
             </div>
 
-            <div class="tabs">
-                <button class="tab active" onclick="showTab('login')">Login</button>
-                <button class="tab" onclick="showTab('register')">Register</button>
-            </div>
+            <!-- LOGIN TAB -->
+            <div id="login-tab" class="tab-content active">
+                <h2>Welcome Back</h2>
+                <p class="tab-description">Sign in to your account</p>
 
-            <!-- Login Form -->
-            <div id="login-form" class="form-container active">
-                <h2>Welcome Back!</h2>
-                <form onsubmit="handleLogin(event)">
-                    <div class="user-type-selector">
-                        <label class="radio-option">
-                            <input type="radio" name="user_type" value="farmer" checked>
-                            <span>👨‍🌾 Farmer</span>
-                        </label>
-                        <label class="radio-option">
-                            <input type="radio" name="user_type" value="research_center">
-                            <span>🔬 Research Center</span>
-                        </label>
+                <!-- User Type Selection -->
+                <div class="user-type-selector">
+                    <button type="button" class="user-type-btn active" data-type="farmer">
+                        <span class="icon">👨‍🌾</span>
+                        <span>Farmer Login</span>
+                    </button>
+                    <button type="button" class="user-type-btn" data-type="researcher">
+                        <span class="icon">🔬</span>
+                        <span>Researcher Login</span>
+                    </button>
+                </div>
+
+                <!-- Login Form -->
+                <form id="login-form" method="POST" action="{{ url_for('login') }}">
+                    <input type="hidden" id="login-user-type" name="user_type" value="farmer">
+
+                    <div class="form-group">
+                        <label for="login-username">Username</label>
+                        <input 
+                            type="text" 
+                            id="login-username" 
+                            name="username" 
+                            placeholder="Enter your username"
+                            required
+                        >
                     </div>
 
                     <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" name="email" required placeholder="Enter your email">
+                        <label for="login-password">Password</label>
+                        <input 
+                            type="password" 
+                            id="login-password" 
+                            name="password" 
+                            placeholder="Enter your password"
+                            required
+                        >
                     </div>
 
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" name="password" required placeholder="Enter your password">
+                    <div class="form-options">
+                        <label>
+                            <input type="checkbox" name="remember-me">
+                            Remember me
+                        </label>
+                        <a href="#" class="forgot-password">Forgot Password?</a>
                     </div>
 
-                    <button type="submit" class="btn-primary">Login</button>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
 
-                    <div class="demo-credentials">
-                        <p><strong>Demo Credentials:</strong></p>
-                        <p>Farmer: rajesh.kumar@example.com / farmer123</p>
-                        <p>Research: iirr.hyderabad@icar.gov.in / research123</p>
+                <div class="divider">or</div>
+
+                <button class="btn btn-social">
+                    <span>📱 Login with WhatsApp</span>
+                </button>
+            </div>
+
+            <!-- REGISTER TAB -->
+            <div id="register-tab" class="tab-content">
+                <h2>Create Account</h2>
+                <p class="tab-description">Join our farming community</p>
+
+                <!-- User Type Selection for Registration -->
+                <div class="user-type-selector">
+                    <button type="button" class="user-type-btn active" data-type="farmer">
+                        <span class="icon">👨‍🌾</span>
+                        <span>Register as Farmer</span>
+                    </button>
+                    <button type="button" class="user-type-btn" data-type="researcher">
+                        <span class="icon">🔬</span>
+                        <span>Register as Researcher</span>
+                    </button>
+                </div>
+
+                <!-- Registration Form -->
+                <form id="register-form" method="POST" action="{{ url_for('register') }}">
+                    <input type="hidden" id="register-user-type" name="user_type" value="farmer">
+
+                    <!-- Common Fields -->
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="register-username">Username</label>
+                            <input 
+                                type="text" 
+                                id="register-username" 
+                                name="username" 
+                                placeholder="Choose username"
+                                required
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="register-email">Email Address</label>
+                            <input 
+                                type="email" 
+                                id="register-email" 
+                                name="email" 
+                                placeholder="your@email.com"
+                                required
+                            >
+                        </div>
                     </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="register-whatsapp">WhatsApp Number</label>
+                            <input 
+                                type="tel" 
+                                id="register-whatsapp" 
+                                name="whatsapp_number" 
+                                placeholder="10 digit number"
+                                pattern="[0-9]{10}"
+                                required
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="register-phone">Phone Number</label>
+                            <input 
+                                type="tel" 
+                                id="register-phone" 
+                                name="phone_number" 
+                                placeholder="Optional"
+                                pattern="[0-9]{10}"
+                            >
+                        </div>
+                    </div>
+
+                    <!-- Farmer Specific Fields -->
+                    <div id="farmer-fields" class="farmer-specific">
+                        <div class="form-group">
+                            <label for="register-full-name">Full Name</label>
+                            <input 
+                                type="text" 
+                                id="register-full-name" 
+                                name="full_name" 
+                                placeholder="Your full name"
+                                required
+                            >
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="register-city">City</label>
+                                <input 
+                                    type="text" 
+                                    id="register-city" 
+                                    name="city" 
+                                    placeholder="City"
+                                    required
+                                >
+                            </div>
+
+                            <div class="form-group">
+                                <label for="register-state">State</label>
+                                <input 
+                                    type="text" 
+                                    id="register-state" 
+                                    name="state" 
+                                    placeholder="State"
+                                    required
+                                >
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="register-address">Farm Address</label>
+                            <textarea 
+                                id="register-address" 
+                                name="address" 
+                                placeholder="Your farm address"
+                                rows="3"
+                                required
+                            ></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="register-farm-size">Farm Size (hectares)</label>
+                            <input 
+                                type="number" 
+                                id="register-farm-size" 
+                                name="farm_size" 
+                                step="0.1"
+                                placeholder="e.g., 5.5"
+                            >
+                        </div>
+                    </div>
+
+                    <!-- Researcher Specific Fields -->
+                    <div id="researcher-fields" class="researcher-specific" style="display: none;">
+                        <div class="form-group">
+                            <label for="register-full-name-researcher">Full Name</label>
+                            <input 
+                                type="text" 
+                                id="register-full-name-researcher" 
+                                name="full_name_researcher" 
+                                placeholder="Your full name"
+                                required
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="register-organization">Organization</label>
+                            <input 
+                                type="text" 
+                                id="register-organization" 
+                                name="organization" 
+                                placeholder="Organization name"
+                                required
+                            >
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="register-department">Department</label>
+                                <input 
+                                    type="text" 
+                                    id="register-department" 
+                                    name="department" 
+                                    placeholder="e.g., Plant Pathology"
+                                >
+                            </div>
+
+                            <div class="form-group">
+                                <label for="register-research-focus">Research Focus</label>
+                                <input 
+                                    type="text" 
+                                    id="register-research-focus" 
+                                    name="research_focus" 
+                                    placeholder="e.g., Disease management"
+                                >
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="register-password">Password</label>
+                            <input 
+                                type="password" 
+                                id="register-password" 
+                                name="password" 
+                                placeholder="Create password"
+                                required
+                            >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="register-confirm-password">Confirm Password</label>
+                            <input 
+                                type="password" 
+                                id="register-confirm-password" 
+                                name="confirm_password" 
+                                placeholder="Confirm password"
+                                required
+                            >
+                        </div>
+                    </div>
+
+                    <div class="checkbox-group">
+                        <label>
+                            <input type="checkbox" name="agree-terms" required>
+                            I agree to the Terms & Conditions
+                        </label>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Create Account</button>
                 </form>
             </div>
 
-            <!-- Registration Form -->
-            <div id="register-form" class="form-container">
-                <h2>New Farmer Registration</h2>
-                <form onsubmit="handleRegister(event)">
-                    <div class="form-group">
-                        <label>Full Name</label>
-                        <input type="text" name="name" required placeholder="Enter your full name">
-                    </div>
-
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" name="email" required placeholder="Enter your email">
-                    </div>
-
-                    <div class="form-group">
-                        <label>Phone Number</label>
-                        <input type="tel" name="phone" required placeholder="+91-XXXXXXXXXX">
-                    </div>
-
-                    <div class="form-group">
-                        <label>Address</label>
-                        <input type="text" name="address" required placeholder="Enter your address">
-                    </div>
-
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" name="password" required placeholder="Create a password">
-                    </div>
-
-                    <button type="submit" class="btn-primary">Register</button>
-                </form>
+            <!-- Footer -->
+            <div class="auth-footer">
+                <p>Don't have an account? <a href="#" class="switch-tab" data-tab="register">Register here</a></p>
+                <p class="security-note">🔒 Your data is encrypted and secure</p>
             </div>
         </div>
     </div>
 
-    <script src="auth.js"></script>
+    <!-- Alert Messages -->
+    <div id="alert-container"></div>
+
+    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
 </body>
 </html>
