--- a/website/login.html
+++ b/website/login.html
@@ -310,6 +310,6 @@
     <!-- Alert Messages -->
     <div id="alert-container"></div>
 
-    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/auth.js') }}?v=3.0"></script>
 </body>
 </html>
